--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nodejs_zoom_clone",
+  "name": "zoom_clone",
   "version": "1.0.0",
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon" 
+    "dev": "nodemon"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
@@ -12,5 +12,10 @@
     "@babel/node": "^7.15.4",
     "@babel/preset-env": "^7.15.4",
     "nodemon": "^2.0.12"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "pug": "^3.0.2",
+    "ws": "^8.2.1"
   }
 }
